rusqlite_migration/src/tests/snapshots/rusqdoltlite_migration__tests__builder__len_builder.snap
---
source: rusqdoltlite_migration/src/tests/builder.rs
expression: migrations
snapshot_kind: text
---
Migrations {
    ms: [
        M {
            up: "CREATE TABLE friend(name TEXT);",
            up_hook: None,
            down: None,
            down_hook: None,
            foreign_key_check: false,
            comment: None,
        },
        M {
            up: "ALTER TABLE friend ADD COLUMN birthday TEXT;",
            up_hook: None,
            down: None,
            down_hook: None,
            foreign_key_check: false,
            comment: None,
        },
    ],
}
